k8s/storage.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: storage-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: storage
  template:
    metadata:
      labels:
        app: storage
    spec:
      containers:
      - name: storage
        image: busybox
        command: ["sleep", "3600"]
---
apiVersion: v1
kind: Service
metadata:
  name: storage-svc
spec:
  selector:
    app: storage
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  clusterIP: None
